# Karam

./: CMakeLists.txt  engine_export.h  engine_impl.cpp  engine_impl.h  flow.md  gpu_context_manager.cpp  gpu_context_manager.h
autodiff/: dual.h  flow.md
cli/: engine_cli_main.cpp
infrastructure/: adaptive_precision.h  bond_dimension_profiler.cpp  bond_dimension_profiler.h  compiled_block.h  contraction_tree.cpp  contraction_tree.h  factor_graph.cpp  factor_graph.h  flow.md  graph_partitioner.cpp  graph_partitioner.h  hardware_capabilities.cpp  hardware_capabilities.h  model_registry.h  monte_carlo.h  mpo_builder.cpp  mpo_builder.h  netlist_compiler.cpp  netlist_compiler.h  netlist_compiler_ctx.cpp  postproc_engine.cpp  postproc_engine.h  safe_utils.h  simtrace.h  tensorscheduler.h  tn_compiler.cpp  tn_compiler.h  treewidth_analyzer.cpp  treewidth_analyzer.h
internal/: engine_pch.h  precision.h
math/: emulated_f64.h  flow.md  fpu_control.h  graph_utils.h  integration_method.h  linalg.h  portable_rng.h  sparse_lu.cpp  sparse_lu.h
models/: diode.yaml  flow.md  mosfet_level1.yaml
netlist/: circuit.h  graph_canonical.h  netlist_diff.h  netlist_export.cpp  netlist_export.h  spice_parser.cpp  spice_parser.h  subcircuit_validator.h
physics/: circuitsim.h  circuitsim_audit.inc  corner_config.h  design_rules.h  device_physics.h  flow.md  gui_boundary_guard.h  noise_models.h  physics_constants.h  quick_analysis.cpp  quick_analysis.h  sensitivity_analysis.h  stamps.h  statistical_engine.h
physics/veriloga/: CMakeLists.txt  analyzer.cpp  analyzer.h  ast.cpp  ast.h  flow.md  graph_assembler.cpp  graph_assembler.h  lexer.cpp  lexer.h  parser.cpp  parser.h
shaders/: flow.md  gen_diode.wgsl  gen_mosfet_level1.wgsl  gpu_nr_loop.wgsl
solvers/: ac_solver.cpp  ac_solver.h  analysis_registry.cpp  analysis_registry.h  circuitsim_solver.cpp  contraction_executor.cpp  contraction_executor.h  convergence_engine.h  flow.md  fourier_analysis.cpp  fourier_analysis.h  neural_seeder.h  pz_analysis.cpp  pz_analysis.h  register_analyses.cpp  register_analyses.h  schur_solver.cpp  schur_solver.h  staged_dispatcher.cpp  staged_dispatcher.h  superposition.cpp  superposition.h  tensor_workspace.h  tf_analysis.cpp  tf_analysis.h  webgpu_solver.cpp  webgpu_solver.h
tensors/: flow.md  kernel_dispatch.cpp  kernel_dispatch.h  physics_kernels_avx2.cpp  physics_kernels_avx512.cpp  physics_tensors.cpp  physics_tensors.h  tensor_network.h
tools/physics_compiler/: __init__.py  __main__.py  flow.md  frontend.py  ir.py  jacobian.py
